General revision for class an method names format.
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1550944 13f79535-47bb-0310-9956-ffa450edef68

--- a/guide/guide/src/docs/guide/toc.yml
+++ b/guide/guide/src/docs/guide/toc.yml
@@ -92,10 +92,10 @@ chapter11:
   chapter11_12: Summary
 chapter12:
   title: Displaying multiple items with repeaters
-  chapter12_1: Component RepeatingView
-  chapter12_2: Component ListView
-  chapter12_3: Component RefreshingView
-  chapter12_4: Pageable repeaters
+  chapter12_1: The RepeatingView Component
+  chapter12_2: The ListView Component
+  chapter12_3: The RefreshingView Component
+  chapter12_4: Pageable repeaters 
   chapter12_5: Summary
 chapter13:
   title: Internationalization with Wicket
