Added a paragraph on resource bundle (to merge different resource into a single one)
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1554550 13f79535-47bb-0310-9956-ffa450edef68

--- a/guide/guide/src/docs/guide/toc.yml
+++ b/guide/guide/src/docs/guide/toc.yml
@@ -112,11 +112,12 @@ chapter14:
   chapter14_3: Package resources
   chapter14_4: Adding resources to page header section
   chapter14_5: Resource dependencies
-  chapter14_6: Custom resources
-  chapter14_7: Mounting resources
-  chapter14_8: Shared resources
-  chapter14_9: Customizing resource loading
-  chapter14_10: Summary
+  chapter14_6: Aggregate multiple risources with resource bundles
+  chapter14_7: Custom resources
+  chapter14_8: Mounting resources
+  chapter14_9: Shared resources
+  chapter14_10: Customizing resource loading
+  chapter14_11: Summary
 chapter15:
   title: An example of integration with JavaScript
   chapter15_1: What we want to do...
