Fixed small typo
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1620187 13f79535-47bb-0310-9956-ffa450edef68

--- a/guide/guide/src/docs/guide/toc.yml
+++ b/guide/guide/src/docs/guide/toc.yml
@@ -113,7 +113,7 @@ resources:
   resources_3: Package resources
   resources_4: Adding resources to page header section
   resources_5: Resource dependencies
-  resources_6: Aggregate multiple risources with resource bundles
+  resources_6: Aggregate multiple resources with resource bundles
   resources_7: Put JavaScript inside page body
   resources_8: Header contributors positioning
   resources_9: Custom resources
