Added a paragrph on exception handling.
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1636201 13f79535-47bb-0310-9956-ffa450edef68

--- a/guide/guide/src/docs/guide/toc.yml
+++ b/guide/guide/src/docs/guide/toc.yml
@@ -55,7 +55,8 @@ requestProcessing:
   requestProcessing_2: Request and Response classes
   requestProcessing_3: The “director” of request processing - RequestCycle
   requestProcessing_4: Session Class
-  requestProcessing_5: Summary
+  requestProcessing_5: Exception handling
+  requestProcessing_6: Summary
 urls:
   title: Wicket Links and URL generation
   urls_1: PageParameters
