Added a paragraph for wicketstuff stateless project
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1656307 13f79535-47bb-0310-9956-ffa450edef68

--- a/guide/guide/src/docs/guide/toc.yml
+++ b/guide/guide/src/docs/guide/toc.yml
@@ -211,6 +211,7 @@ wicketstuff:
   wicketstuff_4: Module wicketstuff-googlecharts
   wicketstuff_5: Module wicketstuff-inmethod-grid
   wicketstuff_6: Module wicketstuff-rest-annotations
+  wicketstuff_7: Module stateless
 redirects:
   title: Lost In Redirection With Apache Wicket (Appendix)
 contributing:
