--- a/guide/guide/src/docs/guide/toc.yml
+++ b/guide/guide/src/docs/guide/toc.yml
@@ -122,7 +122,8 @@ resources:
   resources_11: Mounting resources
   resources_12: Shared resources
   resources_13: Customizing resource loading
-  resources_14: Summary
+  resources_14: CssHeaderItem and JavaScriptHeaderItem compression
+  resources_15: Summary
 jsintegration:
   title: An example of integration with JavaScript
   jsintegration_1: What we want to do...
